fix file name overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,3 +135,6 @@ input.form-control-plaintext {
     color: #fff;
     background-color: #00e000;
 }
+.custom-file {
+    overflow: hidden;
+}
